# voice-email-agent

./: README.md  docker-compose.yml  pyproject.toml
tests/integration/database/: test_database_setup.py  test_vector_store.py
tests/integration/email/: test_email_etl_service.py  test_email_service.py  test_email_tools.py  test_fetch_emails.py
voice_agent/: config.py  database_service.py  email_fetcher.py  etl_service.py  main.py  models.py
voice_agent/database/: email_repository.py  etl_repository.py  migrations.py
voice_agent/email_services/: email_service.py  transport_manager.py
voice_agent/email_services/transports/: mailpit_transport.py  nylas_transport.py  protocol.py
voice_agent/embeddings/: vector_store.py
voice_agent/tools/: email_send_tool.py  email_tools.py
